# Unmanned-Mahjong-Parlor

./: .gitignore  PROJECT_CONTEXT.md  README.md  setup.sh
python_24_qipaishi/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
python_24_qipaishi/app/: __init__.py  main.py
python_24_qipaishi/docs/: 00-bmad-input-summary.md  01-development-plan.md  02-python-architecture-plan.md  03-domain-model-plan.md  04-api-implementation-plan.md  05-epics-and-backlog.md  06-next-development-roadmap.md  07-app-client-plan.md  07-web-client-plan.md  08-environment-download-checklist.md  09-m0-verification-report.md  10-hermes-agent-usage-plan.md  11-m1-identity-verification-report.md  12-m2-store-room-verification-report.md  13-m3-booking-core-verification-report.md  14-m4-payment-core-verification-report.md  15-m4-funds-marketing-verification-report.md  16-m5-device-control-verification-report.md  17-m5-m6-bridge-verification-report.md  18-m6-cleaning-completion-verification-report.md  19-m7-merchant-operations-verification-report.md  20-m7-financial-operations-verification-report.md  21-m7-closeout-and-m8-web-start-report.md  22-m8-web-engineering-verification-report.md  23-environment-readiness-check.md  24-codex-project-session-isolation.md  index.md
python_24_qipaishi/scripts/: codex_project_session.sh  smoke_api.py
python_24_qipaishi/tests/: conftest.py  test_health.py  test_m2_config.py  test_m3_booking_core.py  test_m4_payment_core.py  test_m5_device_control.py  test_m6_cleaning_workflow.py  (+4 more)
(+201 files in other folders)
